# minecraft-backend

./: .env.example  .markdownlint.json  Cargo.toml  README.md  TODO.md  diesel.toml  x.sql
.github/workflows/: build.yml
api/: Cargo.toml
api/src/: lib.rs
api/src/managers/: microsoft.rs  mod.rs  xbox.rs
batcher/: Cargo.toml
batcher/src/: main.rs
batcher/src/connectors/: mod.rs  prelude.rs
batcher/src/connectors/sources/: postgres.rs
checker/: Cargo.toml
checker/src/: account.rs  main.rs
checker/src/connectors/: mod.rs  prelude.rs
checker/src/connectors/sources/: postgres.rs
database/: Cargo.toml
database/src/: functions.rs  lib.rs  models.rs  schema.rs
migrations/2024-03-21-011240_init/: up.sql
server/: Cargo.toml
server/src/: main.rs
server/src/handlers/: mod.rs  names.rs  snipe.rs
sniper/: Cargo.toml
sniper/src/: lib.rs
