[workspace]
members = ["api", "batcher", "checker", "database", "server", "sniper"]
resolver = "2"

[workspace.dependencies]
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["gzip", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_qs = "0.12"
thiserror = "1"
diesel = { version = "2", features = ["postgres", "r2d2", "chrono"] }
futures = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
once_cell = "1"
actix-cors = "0.7"
actix-web = "4"
dotenvy = "0.15"
