[package]
name = "api"
version = "0.1.0"
edition = "2021"
authors = ["Matthew Polak <contact@matteopolak.com>"]
description = "An API client for the Minecraft: Java Edition login flow"

[dependencies]
chrono = "0.4.23"
reqwest = { version = "0.11.14", features = ["gzip", "json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_qs = "0.11.0"
