[package]
name = "api"
version = "0.1.0"
edition = "2021"
authors = ["Matthew Polak <contact@matteopolak.com>"]
description = "An API client for the Minecraft: Java Edition login flow"

[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
reqwest = { version = "0.11.14", features = ["gzip", "json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
serde_qs = "0.11.0"
