[package]
name = "api"
version = "0.1.0"
edition = "2021"
authors = ["Matthew Polak <contact@matteopolak.com>"]
description = "An API client for the Minecraft: Java Edition login flow"

[dependencies]
chrono.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_qs.workspace = true
thiserror.workspace = true
