[package]
name = "batcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
database = { path = "../database" }
diesel.workspace = true
dotenvy.workspace = true
futures.workspace = true
reqwest.workspace = true
serde.workspace = true
tokio.workspace = true
