[package]
name = "checker"
version = "0.1.0"
edition = "2021"
authors = ["Matthew Polak <contact@matteopolak.com>"]
description = "Checks for Minecraft: Java Edition username changes and updates the attached connector"

[dependencies]
api = { path = "../api" }
chrono = "0.4.23"
dotenv = "0.15.0"
once_cell = "1.17.0"
reqwest = { version = "0.11.13", features = ["json", "gzip"] }
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1.24.2", features = ["rt-multi-thread", "macros"] }
tokio-postgres = "0.7.7"
