[package]
name = "checker"
version = "0.1.0"
edition = "2021"
authors = ["Matthew Polak <contact@matteopolak.com>"]
description = "Checks for Minecraft: Java Edition username changes and updates the attached connector"

[dependencies]
api = { path = "../api" }
database = { path = "../database" }
sniper = { path = "../sniper" }
chrono.workspace = true
diesel.workspace = true
dotenvy.workspace = true
once_cell.workspace = true
reqwest.workspace = true
serde.workspace = true
tokio.workspace = true
