[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.0"
dotenv = "0.15.0"
serde = { version = "1.0.152", features = ["derive"] }
database = { path = "../database" }
diesel = { version = "2.0.2", features = ["postgres", "chrono"] }
chrono = { version = "0.4.23", features = ["serde"] }
